Fixed nav z-index

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,14 +1,13 @@
 
 .nav{
     position:relative;
-    z-index:9999;
+    z-index:10000;
     flex-direction:column;
     align-items:flex-end;
     gap:2rem;
     position:fixed;
     top:0;
     right:2.6rem;
-    z-index:5;
     margin-top:4rem;
     padding:1.4rem;
 }
@@ -104,5 +103,4 @@ body.dark .navLink a{
     .toggleThemeBtn img{
         width:10px;
     }
-
 }
